--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ the extensions support.
 authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
 repository = "https://github.com/xwde/countio"
 homepage = "https://github.com/xwde/countio"
-categories = ["parsing"]
-keywords = []
+categories = ["parser-implementations", "parsing", "web-programming"]
+keywords = ["robots", "crawler", "parser"]
 
 [package.metadata.docs.rs]
 all-features = true
@@ -26,7 +26,9 @@ path = "./lib.rs"
 
 [features]
 default = []
+time = ["dep:time"]
 
 [dependencies]
 regex = { version = "1.7.1" }
 url = { version = "2.3.1" }
+time = { version = "0.3.20", optional = true }
