--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2021"
 license = "MIT"
 readme = "./README.md"
 description = """
-The implementation of the robots.txt protocol with
-the extensions support.
+The implementation of the robots.txt
+protocol with the extension support.
 """
 
 authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
-repository = "https://github.com/xwde/countio"
-homepage = "https://github.com/xwde/countio"
+repository = "https://github.com/xwde/robotxt"
+homepage = "https://github.com/xwde/robotxt"
 categories = ["parser-implementations", "parsing", "web-programming"]
 keywords = ["robots", "crawler", "parser"]
 
@@ -28,6 +28,8 @@ path = "./lib.rs"
 default = []
 
 [dependencies]
+nom = { version = "7.1.3" }
+bstr = { version = "1.3.0" }
 regex = { version = "1.7.1" }
 url = { version = "2.3.1" }
-nom = { version = "7.1.3" }
+once_cell = { version = "1.17.1" }
