--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ bstr = { version = "1.3.0" }
 regex = { version = "1.7.1" }
 url = { version = "2.3.1" }
 once_cell = { version = "1.17.1" }
+percent-encoding = { version = "2.2.0" }
