--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,16 +23,10 @@ all-features = true
 [lib]
 path = "./lib.rs"
 
-[features]
-default = ["parse"]
-parse = ["dep:nom", "dep:bstr", "dep:regex", "dep:once_cell", "dep:percent-encoding"]
-fetch = []
-build = []
-
 [dependencies]
 url = { version = "2.3.1" }
-nom = { version = "7.1.3", optional = true }
-bstr = { version = "1.3.0", optional = true }
-regex = { version = "1.7.1", optional = true }
-once_cell = { version = "1.17.1", optional = true }
-percent-encoding = { version = "2.2.0", optional = true }
+nom = { version = "7.1.3" }
+bstr = { version = "1.3.0" }
+regex = { version = "1.7.1" }
+once_cell = { version = "1.17.1" }
+percent-encoding = { version = "2.2.0" }
