--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2021"
 license = "MIT"
 readme = "./README.md"
 description = """
-The implementation of the robots.txt protocol.
+The implementation of the Robots.txt (or URL exclusion) protocol.
 """
 
 authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
 repository = "https://github.com/xwde/robotxt"
 homepage = "https://github.com/xwde/robotxt"
-categories = ["parser-implementations", "parsing", "web-programming"]
+categories = ["parser-implementations", "web-programming"]
 keywords = ["robots", "crawler", "parser"]
 
 [lib]
