--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
 repository = "https://github.com/xwde/robotxt"
 homepage = "https://github.com/xwde/robotxt"
 categories = ["parser-implementations", "web-programming"]
-keywords = ["robots", "crawler", "parser"]
+keywords = ["robots", "txt", "crawler", "parser", "builder"]
 
 [lib]
 path = "./lib.rs"
