--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,20 +2,20 @@
 
 [package]
 name = "robotxt"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 license = "MIT"
 readme = "./README.md"
 description = """
-The implementation of the robots.txt protocol.
+The implementation of the Robots.txt (or URL exclusion) protocol.
 """
 
 authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
 repository = "https://github.com/xwde/robotxt"
 homepage = "https://github.com/xwde/robotxt"
-categories = ["parser-implementations", "parsing", "web-programming"]
-keywords = ["robots", "crawler", "parser"]
+categories = ["parser-implementations", "web-programming"]
+keywords = ["robots", "txt", "crawler", "parser", "builder"]
 
 [lib]
 path = "./lib.rs"
